kubernetes/headlamp/addl/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: headlamp
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: cilium-system
  hostnames:
  - "headlamp.local.127.0.0.1.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
